--- a/www/templates/choose-league.html
+++ b/www/templates/choose-league.html
@@ -1,11 +1,19 @@
-<div class="row">
-    <button class="button option-active" ng-if="selectAllLeagues == false" ng-click="setLeaguesSame(true)">Select All</button>
-    <button class="button option-active"
+<div class="row" style=" width:70%; margin:0 auto">
+    <button class="button option-active col" ng-if="selectAllLeagues == false" ng-click="setLeaguesSame(true)">Select All</button>
+    <button class="button option-active col"
             ng-if="selectAllLeagues == true" ng-click="setLeaguesSame(false)">Deselect All</button>
 </div>
+
+<div class="list list-inset" style="margin: 0px">
+    <label class="item item-input">
+        <i class="icon ion-search placeholder-icon"></i>
+        <input type="text" ng-model="leagueSearch.value" placeholder="Search" style="color:white">
+    </label>
+</div>
+
 <ul class="list">
 
-    <li class="item item-checkbox" collection-repeat="league in leagues">
+    <li class="item item-checkbox" collection-repeat="league in leagues | filter: leagueSearch.value">
         <label class="checkbox checkbox-assertive">
             <input type="checkbox" ng-model="league.value">
         </label>
