--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -29,7 +29,7 @@
             <ion-content>
                 <div class="list">
 
-                    <div class="item item-divider" style=" background-color: #5980A4 !important ;">
+                    <div class="item item-divider side-menu-divider">
                        Sports
                     </div>
 
@@ -81,7 +81,7 @@
                         <span class="badge badge-assertive">{{badges.Tennis}}</span>
                     </a>
 
-                    <div class="item item-divider" style=" background-color: #5980A4 !important ;">
+                    <div class="item item-divider side-menu-divider" >
                         Tables
                     </div>
 
@@ -97,7 +97,7 @@
                         Accuracy
                     </a>
 
-                    <div class="item item-divider" style=" background-color: #5980A4 !important ;">
+                    <div class="item item-divider side-menu-divider">
                         Customise
                     </div>
 
@@ -159,9 +159,7 @@
         <h1 class="title elements">Choose League
         </h1>
     </ion-header-bar>
-    <ion-content>
-        <choose-league></choose-league>
-    </ion-content>
+    <choose-league></choose-league>
 </div>
 
 
